[gd_scene load_steps=4 format=2]

[ext_resource path="res://WarpZone.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[node name="WarpZone" type="Node2D" groups=[
"warpzones",
]]
script = ExtResource( 1 )

[node name="LeftZone" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 6

[node name="ColorRect" type="ColorRect" parent="LeftZone"]
margin_left = -24.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftZone"]
position = Vector2( -16, 0 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="RightZone" type="Area2D" parent="."]
position = Vector2( 56, 0 )
collision_layer = 64
collision_mask = 6

[node name="ColorRect" type="ColorRect" parent="RightZone"]
margin_left = -8.0
margin_top = -8.0
margin_right = 24.0
margin_bottom = 8.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightZone"]
position = Vector2( 16, 0 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="area_entered" from="LeftZone" to="." method="_on_LeftZone_area_entered"]
[connection signal="area_entered" from="RightZone" to="." method="_on_RightZone_area_entered"]
